--- a/index.html
+++ b/index.html
@@ -47,21 +47,27 @@
                 </div></li>
                 <li><div class="album"> 
                     <img src="./MusicDemo.jpg" alt="album_art"> 
+                    <p>Wanna Listen <br> Hard Rock Music </p>
                 </div></li>
                 <li><div class="album"> 
                     <img src="./MusicDemo.jpg" alt="album_art"> 
+                    <p>Wanna Listen <br> Hard Rock Music </p>
                 </div></li>
                 <li><div class="album"> 
                     <img src="./MusicDemo.jpg" alt="album_art"> 
+                    <p>Wanna Listen <br> Hard Rock Music </p>
                 </div></li>
                 <li><div class="album"> 
                     <img src="./MusicDemo.jpg" alt="album_art"> 
+                    <p>Wanna Listen <br> Hard Rock Music </p>
                 </div></li>
                 <li><div class="album"> 
                     <img src="./MusicDemo.jpg" alt="album_art"> 
+                    <p>Wanna Listen <br> Hard Rock Music </p>
                 </div></li>
                 <li><div class="album"> 
                     <img src="./MusicDemo.jpg" alt="album_art"> 
+                    <p>Wanna Listen <br> Hard Rock Music </p>
                 </div></li>
 
                 
